--- a/Grover_2qubits.ipynb
+++ b/Grover_2qubits.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cb9ad168-3465-4b8e-b22b-055ea903df14",
+   "metadata": {},
+   "source": [
+    "Implementation of Grover's algorithm on a 2-qubits space with qiskit textbook's guidance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "664562c0-57cc-4fc3-95c0-529d0f8a9b34",
+   "metadata": {},
+   "source": [
+    "Importation of the required packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "099e2923-0201-40ef-8a21-7f31514d5993",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from qiskit import IBMQ, Aer, assemble, transpile\n",
+    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
+    "from qiskit.providers.ibmq import least_busy\n",
+    "from qiskit.visualization import plot_histogram\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c85af9b-ddbb-45cb-be77-8a9cf3061d67",
+   "metadata": {},
+   "source": [
+    "Implementing the circuit with the Grover class "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "dd7e9907-cd51-43a1-ad0a-05af046bb4d9",
@@ -26,18 +65,6 @@
     }
    ],
    "source": [
-    "#initialization\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "# importing Qiskit\n",
-    "from qiskit import IBMQ, Aer, assemble, transpile\n",
-    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
-    "from qiskit.providers.ibmq import least_busy\n",
-    "\n",
-    "# import basic plot tools\n",
-    "from qiskit.visualization import plot_histogram\n",
-    "\n",
     "n = 2\n",
     "grover_circuit = QuantumCircuit(n)\n",
     "\n",
@@ -57,13 +84,37 @@
     "grover_circuit.h([0,1])\n",
     "grover_circuit.draw()\n",
     "\n",
-    "grover_circuit.measure_all()\n",
-    "\n",
+    "grover_circuit.measure_all()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51b8b802-75e0-4610-acd9-747f7d667831",
+   "metadata": {},
+   "source": [
+    "Simulation of the circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d708e3e-7491-41a9-b68a-a294ea2cf9cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "aer_sim = Aer.get_backend('aer_simulator')\n",
     "qobj = assemble(grover_circuit)\n",
     "result = aer_sim.run(qobj).result()\n",
     "counts = result.get_counts()\n",
     "plot_histogram(counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72a6fe93-66af-45c7-9e65-41e138fb17d6",
+   "metadata": {},
+   "source": [
+    "Processing of the circuit on quantum hardware"
    ]
   },
   {
