--- a/Grover_3qubits_CZoracle.ipynb
+++ b/Grover_3qubits_CZoracle.ipynb
@@ -1,6 +1,107 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ab0c0f12-443a-4e68-98d9-d6cf8d0518c6",
+   "metadata": {},
+   "source": [
+    "Implementation of the Grover algorithm with the CZ-gate model on a 3-qubits space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e95c4d23-49e9-4b79-957f-71d4fd8c608d",
+   "metadata": {},
+   "source": [
+    "Importation of the required packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ef69942-dff1-453f-a0a0-a927f5fdd112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from math import pi\n",
+    "from qiskit import IBMQ, Aer, assemble, transpile\n",
+    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
+    "from qiskit.providers.ibmq import least_busy\n",
+    "from qiskit.visualization import plot_histogram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db383a0b-b6b1-4241-84b9-41bc6f17bb13",
+   "metadata": {},
+   "source": [
+    "Initialisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "287212cb-55c2-4809-84fb-e41816313649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_s(qc, qubits):\n",
+    "    \"\"\"Apply a H-gate to 'qubits' in qc\"\"\"\n",
+    "    for q in qubits:\n",
+    "        qc.h(q)\n",
+    "    return qc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "270d971e-3642-4f7b-b939-966e01e6cd3f",
+   "metadata": {},
+   "source": [
+    "Diffuser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37777f63-59f7-40dd-9df3-287e511ff0b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diffuser(nqubits):\n",
+    "    qc = QuantumCircuit(nqubits)\n",
+    "    # Apply transformation |s> -> |00..0> (H-gates)\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.h(qubit)\n",
+    "    # Apply transformation |00..0> -> |11..1> (X-gates)\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.x(qubit)\n",
+    "    # Do multi-controlled-Z gate\n",
+    "    qc.h(nqubits-1)\n",
+    "    qc.mct(list(range(nqubits-1)), nqubits-1)  # multi-controlled-toffoli\n",
+    "    qc.h(nqubits-1)\n",
+    "    # Apply transformation |11..1> -> |00..0>\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.x(qubit)\n",
+    "    # Apply transformation |00..0> -> |s>\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.h(qubit)\n",
+    "    # We will return the diffuser as a gate\n",
+    "    U_s = qc.to_gate()\n",
+    "    U_s.name = \"U$_s$\"\n",
+    "    return U_s\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63cd4ad1-6b13-4141-b41f-ee6b7b51e884",
+   "metadata": {},
+   "source": [
+    "Creation of my Grover circuit using Qiskit tools with Grover class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6838ebcf-805c-4ad1-93ea-5fb33502eb31",
@@ -26,50 +127,6 @@
     }
    ],
    "source": [
-    "#initialization\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from math import pi\n",
-    "# importing Qiskit\n",
-    "from qiskit import IBMQ, Aer, assemble, transpile\n",
-    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
-    "from qiskit.providers.ibmq import least_busy\n",
-    "\n",
-    "# import basic plot tools\n",
-    "from qiskit.visualization import plot_histogram\n",
-    "\n",
-    "\n",
-    "def initialize_s(qc, qubits):\n",
-    "    \"\"\"Apply a H-gate to 'qubits' in qc\"\"\"\n",
-    "    for q in qubits:\n",
-    "        qc.h(q)\n",
-    "    return qc\n",
-    "\n",
-    "\n",
-    "\n",
-    "def diffuser(nqubits):\n",
-    "    qc = QuantumCircuit(nqubits)\n",
-    "    # Apply transformation |s> -> |00..0> (H-gates)\n",
-    "    for qubit in range(nqubits):\n",
-    "        qc.h(qubit)\n",
-    "    # Apply transformation |00..0> -> |11..1> (X-gates)\n",
-    "    for qubit in range(nqubits):\n",
-    "        qc.x(qubit)\n",
-    "    # Do multi-controlled-Z gate\n",
-    "    qc.h(nqubits-1)\n",
-    "    qc.mct(list(range(nqubits-1)), nqubits-1)  # multi-controlled-toffoli\n",
-    "    qc.h(nqubits-1)\n",
-    "    # Apply transformation |11..1> -> |00..0>\n",
-    "    for qubit in range(nqubits):\n",
-    "        qc.x(qubit)\n",
-    "    # Apply transformation |00..0> -> |s>\n",
-    "    for qubit in range(nqubits):\n",
-    "        qc.h(qubit)\n",
-    "    # We will return the diffuser as a gate\n",
-    "    U_s = qc.to_gate()\n",
-    "    U_s.name = \"U$_s$\"\n",
-    "    return U_s\n",
-    "\n",
     "n = 3\n",
     "grover_circuit = QuantumCircuit(n)\n",
     "grover_circuit = initialize_s(grover_circuit, [0,1,2])\n",
@@ -81,15 +138,38 @@
     "grover_circuit.append(oracle_ex3, [0,1,2])\n",
     "grover_circuit.append(diffuser(n), [0,1,2])\n",
     "grover_circuit.measure_all()\n",
-    "grover_circuit.draw()\n",
-    "\n",
+    "grover_circuit.draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71ef5d72-bdce-416a-a5b0-adcad5666cf8",
+   "metadata": {},
+   "source": [
+    "Simulation of the circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1938e516-c5ef-4492-876a-dc92cad96791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "aer_sim = Aer.get_backend('aer_simulator')\n",
     "transpiled_grover_circuit = transpile(grover_circuit, aer_sim)\n",
     "qobj = assemble(transpiled_grover_circuit)\n",
     "results = aer_sim.run(qobj).result()\n",
     "counts = results.get_counts()\n",
-    "plot_histogram(counts)\n",
-    "\n"
+    "plot_histogram(counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b63af9-d25a-45f4-956c-1fa5b8b506d5",
+   "metadata": {},
+   "source": [
+    "Visualization of the circuit"
    ]
   },
   {
@@ -112,6 +192,14 @@
    ],
    "source": [
     "grover_circuit.draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94af4d7f-05b9-46c6-9dd5-1f9535b6ac21",
+   "metadata": {},
+   "source": [
+    "Processing of the circuit on quantum hardware"
    ]
   },
   {
@@ -149,7 +237,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Load IBM Q account and get the least busy backend device\n",
     "provider = IBMQ.load_account()\n",
     "provider = IBMQ.get_provider(\"ibm-q\")\n",
@@ -171,6 +258,14 @@
     "results = job.result()\n",
     "answer = results.get_counts(grover_circuit)\n",
     "plot_histogram(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e31f7a7-7fd0-4ee7-a555-f1f5c105c372",
+   "metadata": {},
+   "source": [
+    "Implementation of an error in the Grover circuit"
    ]
   },
   {
